--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Fri Nov 08 18:11:34 EST 2013
-app.grails.version=2.3.1
+#Tue Nov 19 00:13:17 EST 2013
+app.grails.version=2.3.2
 app.name=reeltime
+app.servlet.version=3.0
 app.version=0.1
