--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Sun Dec 29 02:57:47 EST 2013
-app.grails.version=2.2.4
+#Wed May 28 17:13:35 EDT 2014
+app.grails.version=2.3.8
 app.name=reeltime
+app.servlet.version=2.5
 app.version=0.1
