--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 
 plugins {
     id "io.spring.dependency-management" version "0.5.4.RELEASE"
+    id 'net.saliman.cobertura' version '2.3.1'
 }
 
 version "0.1-SNAPSHOT"
