--- a/buildSrc/src/main/resources/META-INF/gradle-plugins/functional-test.properties
+++ b/buildSrc/src/main/resources/META-INF/gradle-plugins/functional-test.properties
@@ -1,1 +1,1 @@
-implementation-class=in.reeltime.plugin.FunctionalTestPlugin
+implementation-class=in.reeltime.functional.plugin.FunctionalTestPlugin
