--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven { url "https://repo.grails.org/grails/core" }
+    maven { url "http://dl.bintray.com/bluesliverx/grails-plugins" }
 }
 
 dependencyManagement {
@@ -73,7 +74,7 @@ dependencies {
     compile "org.grails.plugins:quartz:2.0.3"
 
     compile "org.grails.plugins:spring-security-core:3.0.0"
-    compile "org.grails.plugins:spring-security-oauth2-provider:3.0.0-SNAPSHOT"
+    compile "org.grails.plugins:spring-security-oauth2-provider:3.0.0-RC1"
 
     compile "commons-codec:commons-codec:1.10"
     compile "com.amazonaws:aws-java-sdk:1.10.43"
