--- a/build.gradle
+++ b/build.gradle
@@ -131,6 +131,8 @@ integrationTest {
         systemProperty 'grails.env', 'test'
         systemProperty 'USE_LOCAL_MYSQL', System.getProperty('USE_LOCAL_MYSQL')
         systemProperty 'ENABLE_SQL_LOGGING', System.getProperty('ENABLE_SQL_LOGGING')
+        systemProperty 'FFPROBE', System.getProperty('FFPROBE')
+        systemProperty 'FFMPEG', System.getProperty('FFMPEG')
     }
 }
 
