--- a/build.gradle
+++ b/build.gradle
@@ -123,17 +123,15 @@ integrationTest {
     outputs.upToDateWhen { false }
 }
 
-['test', 'integrationTest'].each { task ->
-    "$task" {
-        testLogging {
-            exceptionFormat = 'full'
-        }
-        systemProperty 'grails.env', 'test'
-        systemProperty 'USE_LOCAL_MYSQL', System.getProperty('USE_LOCAL_MYSQL')
-        systemProperty 'ENABLE_SQL_LOGGING', System.getProperty('ENABLE_SQL_LOGGING')
-        systemProperty 'FFPROBE', System.getProperty('FFPROBE')
-        systemProperty 'FFMPEG', System.getProperty('FFMPEG')
+tasks.withType(Test) {
+    testLogging {
+        exceptionFormat = 'full'
     }
+    systemProperty 'grails.env', 'test'
+    systemProperty 'USE_LOCAL_MYSQL', System.getProperty('USE_LOCAL_MYSQL')
+    systemProperty 'ENABLE_SQL_LOGGING', System.getProperty('ENABLE_SQL_LOGGING')
+    systemProperty 'FFPROBE', System.getProperty('FFPROBE')
+    systemProperty 'FFMPEG', System.getProperty('FFMPEG')
 }
 
 task wrapper(type: Wrapper) {
