--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,8 @@ dependencies {
     compile "org.apache.tika:tika-parsers:1.11"
     compile "org.imgscalr:imgscalr-lib:4.2"
 
+    compile "dnsjava:dnsjava:2.1.7"
+
     runtime "org.grails.plugins:asset-pipeline"
     runtime "org.grails.plugins:database-migration:2.0.0.RC1"
 
